# shutl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  code-quality.yml  create-release.yml  pr-checks.yml  prepare-release.yml  release.yml
scripts/test/: test.sh
src/: builtin.rs  command.rs  lib.rs  main.rs  metadata.rs  script.rs  validation.rs
