[package]
name = "shutl"
version = "0.0.3"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
clap_complete = { version = "4.4", features = ["unstable-dynamic"] }
walkdir = "2.4"
regex = "1.10"
dirs = "5.0"
is_executable = "1.0.4"

[dev-dependencies]
tempfile = "3.8"
