[package]
name = "shutl"
version = "0.0.6"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
dirs = "6.0"
is_executable = "1.0.4"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.8"
