[package]
name = "shutl"
version = "0.2.0"
edition = "2024"
description = "A command-line tool for organizing, managing, and executing scripts as commands."
license = "MIT OR Apache-2.0"
authors = [
    "K15R"
]

[dependencies]
clap = { version = "4.5", features = ["derive", "string", "cargo"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
dirs = "6.0"
is_executable = "1.0.4"
log = "0.4.27"
env_logger = "0.11.8"
shellexpand = "3.0"

[dev-dependencies]
tempfile = "3.8"
